Refactor index.html for SEO and layout improvements
Updated the HTML structure and added SEO meta tags, improved header section, and enhanced product display.

--- a/index.html
+++ b/index.html
@@ -1,82 +1,96 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lakoffie | Kopi Bubuk Home Made Terbaik</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: #6f4e37; /* Warna Kopi */
-        }
-        .product-card {
-            border: 1px solid #ddd;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 6px;
-            background-color: #fafafa;
-        }
-        .wa-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #25D366; /* Warna WA */
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            margin-top: 15px;
-            transition: background-color 0.3s;
-        }
-        .wa-button:hover {
-            background-color: #128C7E;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lakoffie Kopi Bubuk Murni</title>
+
+  <!-- SEO Dasar -->
+  <meta name="description" content="Lakoffie kopi bubuk murni dengan karakter rasa. Tidak sekadar pahit, ada sensasi asam, aroma gula jawa, dan body kental. Harga ramah, rasa ala cafe." />
+  <meta name="keywords" content="kopi bubuk, kopi robusta, kopi lokal, kopi temanggung, kopi lampung, kopi salatiga, kopi rumahan rasa cafe" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Selamat Datang di Lakoffie</h1>
-        <p>Kopi Bubuk Home Made, Biji Pilihan Terbaik!</p>
-        <hr>
 
-        <h2>☕ Katalog Produk </h2>
-
-        <div class="product-card">
-            <h3>Lakoffie Robusta Blend (250g)</h3>
-            <p>Aroma kuat, rasa mantap, cocok untuk kopi susu atau kopi hitam pagi hari.</p>
-            <p>Harga: Rp 35.000,-</p>
-        </div>
-
-        <div class="product-card">
-            <h3>Lakoffie Arabika Gayo (250g)</h3>
-            <p>Aroma buah-buahan, rasa asam yang segar, pas untuk pecinta kopi filter.</p>
-            <p>Harga: Rp 65.000,-</p>
-        </div>
-
-        <p style="margin-top: 30px;">
-            Tertarik dengan produk Lakoffie? Klik tombol di bawah ini untuk memesan langsung melalui WhatsApp!
-        </p>
-
-        <a class="wa-button" 
-           href="https://wa.me/6285175285640?text=Halo%2C%20saya%20tertarik%20dengan%20kopi%20Lakoffie.%20Mohon%20info%20pemesanan."
-           target="_blank">
-           Pesan Sekarang Via WhatsApp
-        </a>
-        <p style="font-size: small; margin-top: 20px;">*Ganti nomor telepon di atas dengan nomor WA Anda (gunakan kode negara 62).</p>
+  <!-- HEADER / HERO -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Kopi Bubuk yang <span>Tidak Sekadar Pahit</span></h1>
+      <p>
+        Lakoffie menghadirkan kopi bubuk murni dengan karakter rasa.
+        Nyaman untuk seduhan rumahan, nikmat layaknya kopi cafe.
+      </p>
+      <a href="https://wa.me/6285175285640" class="btn-primary">Pesan via WhatsApp</a>
     </div>
+  </header>
+
+  <!-- VALUE PROPOSITION -->
+  <section class="value">
+    <div class="value-item">☕ Karakter rasa di setiap seduhan</div>
+    <div class="value-item">🏠 Nyaman diminum harian di rumah</div>
+    <div class="value-item">✨ Rasa mewah, harga tetap ramah</div>
+  </section>
+
+  <!-- PRODUK / VARIAN -->
+  <section class="produk" id="produk">
+    <h2>3 Varian Kopi Lakoffie</h2>
+    <p class="subtitle">Setiap varian punya karakter, bukan sekadar pahit</p>
+
+    <div class="produk-grid">
+      <div class="produk-card">
+        <h3>Lokal Salatiga</h3>
+        <p class="karakter">Pahit dengan sensasi asam</p>
+        <p class="deskripsi">
+          Cocok untuk penikmat kopi dengan rasa unik.
+          Memberi kesan kopi cafe yang segar untuk seduhan rumahan.
+        </p>
+      </div>
+
+      <div class="produk-card">
+        <h3>Robusta Temanggung</h3>
+        <p class="karakter">Pahit & aroma gula jawa</p>
+        <p class="deskripsi">
+          Karakter pahit seimbang dengan aroma manis alami.
+          Nikmat tanpa gula, hangat, dan beraroma khas.
+        </p>
+      </div>
+
+      <div class="produk-card">
+        <h3>Robusta Lampung</h3>
+        <p class="karakter">Pahit nendang & body kental</p>
+        <p class="deskripsi">
+          Untuk yang suka kopi tebal dan kuat.
+          Rasa pahit mantap dengan body yang terasa penuh.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA TENGAH -->
+  <section class="cta">
+    <h2>Harga Murah, Rasa Mewah</h2>
+    <p>
+      Lakoffie berada di antara kopi instan dan kopi specialty.
+      Pilihan tepat untuk kamu yang ingin naik kelas tanpa mahal.
+    </p>
+    <a href="https://wa.me/62XXXXXXXXXX" class="btn-secondary">Konsultasi & Pesan</a>
+  </section>
+
+  <!-- NAVIGASI TAMBAHAN -->
+  <section class="nav-extra">
+    <a href="mitra.html" class="nav-card">📍 Lihat Mitra Toko</a>
+    <a href="artikel.html" class="nav-card">📝 Artikel & Cerita Kopi</a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© 2025 Lakoffie Kopi Bubuk Murni</p>
+    <p>Kopi lokal | Seduhan rumahan | Rasa cafe</p>
+  </footer>
+
+  <!-- JS -->
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
