Add header and navigation to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
+  !-- HEADER / NAVBAR -->
+<header class="site-header">
+  <div class="header-inner">
+    <div class="brand">
+      <span class="brand-name">LAKOFFIE</span>
+      <span class="brand-tagline">Kopi Bubuk Murni</span>
+    </div>
+    <nav class="nav">
+      <a href="#produk">Produk</a>
+      <a href="mitra.html">Mitra</a>
+      <a href="artikel.html">Artikel</a>
+    </nav>
+  </div>
+</header>
 
   <!-- HEADER / HERO -->
   <header class="hero">
