Fix comment syntax for header/navbar section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  !-- HEADER / NAVBAR -->
+  <!-- HEADER / NAVBAR -->
 <header class="site-header">
   <div class="header-inner">
     <div class="brand">
