Update WhatsApp link for ordering

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       Nikmati kopi bubuk dengan rasa ala cafe.<br>
       <strong>Harga ramah, kualitas tidak murahan.</strong>
     </p>
-    <a href="https://wa.me/62XXXXXXXXXX" class="btn-primary">
+    <a href="https://wa.me/6285175285640" class="btn-primary">
       Pesan Sekarang
     </a>
   </div>
