Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Lakoffie kopi bubuk murni dengan karakter rasa. Tidak sekadar pahit, ada sensasi asam, aroma gula jawa, dan body kental. Harga ramah, rasa ala cafe." />
   <meta name="keywords" content="kopi bubuk, kopi robusta, kopi lokal, kopi temanggung, kopi lampung, kopi salatiga, kopi rumahan rasa cafe" />
 
+  <meta name="google-site-verification" content="w5GUsBDnnrcGyemVmYFN7tqmqA-Aih7yP2xV0vsi6qw" />
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
