Create mitra.html with partner information
Added content for social media, marketplace, and offline partners.

--- a/mitra.html
+++ b/mitra.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <!-- HEADER / NAVBAR -->
+<header class="site-header">
+  <div class="header-inner">
+    <div class="brand">
+      <span class="brand-name">LAKOFFIE</span>
+      <span class="brand-tagline">Kopi Bubuk Murni</span>
+    </div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="mitra.html">Mitra</a>
+      <a href="artikel.html">Artikel</a>
+    </nav>
+  </div>
+</header>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mitra Lakoffie</title>
 
+  <meta name="description" content="Temukan Lakoffie di sosial media, marketplace, dan mitra offline. Kopi bubuk lokal dengan rasa ala cafe." />
+
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+
+  <!-- HEADER SEDERHANA -->
+  <header class="hero" style="padding:50px 20px;">
+    <h1>Mitra & Channel Lakoffie</h1>
+    <p>Temukan Lakoffie melalui berbagai platform online dan mitra offline</p>
+  </header>
+
+  <!-- SOSIAL MEDIA -->
+  <!-- SOSIAL MEDIA -->
+  <section class="produk">
+    <h2>Sosial Media Resmi</h2>
+    <p class="subtitle">Akun resmi Lakoffie untuk update produk & edukasi kopi</p>
+
+    <div class="produk-grid">
+      <a class="produk-card mitra-card" href="https://facebook.com" target="_blank">
+        <h3>Facebook</h3>
+        <span class="mitra-label">Official Page</span>
+      </a>
+
+     <a class="produk-card mitra-card" href="https://instagram.com" target="_blank">
+  <img src="assets/img/icon/instagram.svg" class="mitra-icon" alt="Instagram Lakoffie">
+  <h3>Instagram</h3>
+  <span class="mitra-label">Visual & Story Brand</span>
+</a>
+
+      <a class="produk-card mitra-card" href="https://tiktok.com" target="_blank">
+        <h3>TikTok</h3>
+        <span class="mitra-label">Video & Edukasi Singkat</span>
+      </a>
+    </div>
+  </section>
+
+  <!-- MARKETPLACE -->
+  <section class="produk" style="background:#fff;">
+    <h2>Marketplace Resmi</h2>
+    <p class="subtitle">Channel pembelian resmi Lakoffie untuk transaksi aman</p>
+
+    <div class="produk-grid">
+      <a class="produk-card mitra-card" href="#" target="_blank">
+  <img src="assets/img/icon/shopee.svg" class="mitra-icon" alt="Shopee Lakoffie">
+  <h3>Shopee</h3>
+  <span class="mitra-label">Official Store</span>
+</a>
+
+      <a class="produk-card mitra-card" href="#" target="_blank">
+        <h3>Tokopedia</h3>
+        <span class="mitra-label">Verified Seller</span>
+      </a>
+
+      <a class="produk-card mitra-card" href="#" target="_blank">
+        <h3>TikTok Shop</h3>
+        <span class="mitra-label">Live & Video Commerce</span>
+      </a>
+
+      <a class="produk-card mitra-card" href="#" target="_blank">
+        <h3>Facebook Marketplace</h3>
+        <span class="mitra-label">Direct Transaction</span>
+      </a>
+    </div>
+  </section>
+
+  <!-- MITRA OFFLINE -->
+  <section class="produk">
+    <h2>Mitra Offline</h2>
+    <p class="subtitle">Tersedia di toko & kedai pilihan</p>
+
+    <div class="produk-grid">
+      <div class="produk-card mitra-card">
+        <h3>Toko Kopi Lokal</h3>
+        <span class="mitra-label">Salatiga</span>
+        <a href="https://maps.google.com" target="_blank" class="btn-primary">Lihat Lokasi</a>
+      </div>
+
+      <div class="produk-card mitra-card">
+        <h3>Kedai Mitra</h3>
+        <span class="mitra-label">Temanggung</span>
+        <a href="https://maps.google.com" target="_blank" class="btn-primary">Lihat Lokasi</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>© 2025 Lakoffie Kopi Bubuk Murni</p>
+    <p>Kopi lokal | Seduhan rumahan | Rasa cafe</p>
+  </footer>
+
+</body>
+</html>
