--- a/artikel.html
+++ b/artikel.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XT4KE47MQG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XT4KE47MQG');
+</script>
     <!-- HEADER / NAVBAR -->
 <header class="site-header">
   <div class="header-inner">
