Enhance artikel.html with new sections and search
Added sections for education, tips, and miscellaneous articles, along with a search feature.

--- a/artikel.html
+++ b/artikel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XT4KE47MQG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -18,9 +18,10 @@
       <span class="brand-tagline">Kopi Bubuk Murni</span>
     </div>
     <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="mitra.html">Mitra</a>
-      <a href="artikel.html">Artikel</a>
+    <a href="index.html">Home</a>
+    <a href="artikel.html" class="active">Edukasi</a>
+    <a href="artikel.html#tips">Tips & Trik</a>
+    <a href="artikel.html#lain">Lain-lain</a>
     </nav>
   </div>
 </header>
@@ -39,68 +40,48 @@
   <p>Ingin Lebih Tahu Tentang Dunia Kopi Ala LAKOFFIE? Yuk Cek Disini</p>
 </header>
 
-  <!-- SEARCH ARTIKEL -->
-  <section class="produk" style="padding-bottom:0;">
-    <div class="artikel-search">
-      <input type="text" id="searchArtikel" placeholder="Cari artikel kopi..." />
-    </div>
+<main class="artikel-container">
+
+  <!-- EDUKASI -->
+  <section class="artikel-segment" id="edukasi">
+    <h2>Edukasi Kopi</h2>
+    <div class="artikel-grid" id="edukasiList"></div>
   </section>
 
-  <!-- LIST ARTIKEL -->
-  <section class="produk">
-    <div class="artikel-slider">
+  <!-- TIPS & TRIK -->
+  <section class="artikel-segment" id="tips">
+    <h2>Tips & Trik</h2>
+    <div class="artikel-grid" id="tipsList"></div>
+  </section>
 
-      <article class="produk-card artikel-card" data-kategori="edukasi">
-        <h3>Kopi Tidak Sekadar Pahit</h3>
-        <p class="artikel-excerpt">
-          Mengenal karakter rasa kopi seperti pahit, asam, manis alami, hingga aroma gula jawa.
-        </p>
-        <a href="artikel/kopi-tidak-sekadar-pahit.html" class="btn-secondary">Baca Artikel</a>
-      </article>
-
-      <article class="produk-card artikel-card" data-kategori="edukasi" data-tags="robusta temanggung gula-jawa manis">
-        <h3>Kenapa Kopi Robusta Bisa Beraroma Gula Jawa?</h3>
-        <p class="artikel-excerpt">
-          Penjelasan sederhana tentang proses roasting yang memunculkan aroma khas pada kopi robusta.
-        </p>
-        <a href="artikel/robusta-temanggung-aroma-gula-jawa.html" class="btn-secondary">Baca Artikel</a>
-      </article>
-
-      <article class="produk-card artikel-card"
-      data-tags="excelsa salatiga asam unik">
-        <h3>Excelsa Lokal Salatiga: Pahit dengan Sentuhan Asam</h3>
-        <p class="artikel-excerpt">
-          Karakter unik kopi excelsa yang berbeda dari arabika maupun robusta.
-        </p>
-        <a href="artikel/excelsa-lokal-salatiga.html" class="btn-secondary">Baca Artikel</a>
-      </article>
-
-      <article class="produk-card artikel-card">
-      <h3>Robusta Lampung</h3>
-      <p class="artikel-excerpt">
-        Pahit nendang dengan body kental, favorit penikmat kopi hitam.
-      </p>
-  <a href="artikel/robusta-lampung-pahit-nendang.html" class="btn-secondary">
-    Baca Artikel
-  </a>
-</article>
-    </div>
+  <!-- LAIN-LAIN -->
+  <section class="artikel-segment" id="lain">
+    <h2>Lain-lain</h2>
+    <div class="artikel-grid" id="lainList"></div>
   </section>
   
-    <div class="artikel-tags hidden-tags">
-  <a href="artikel.html?tag=robusta">#robusta</a>
-  <a href="artikel.html?tag=excelsa">#excelsa</a>
-  <a href="artikel.html?tag=temanggung">#temanggung</a>
-  <a href="artikel.html?tag=lampung">#lampung</a>
-  <a href="artikel.html?tag=kopi-rumahan">#kopi-rumahan</a>
-</div>
+    <!-- SEARCH ARTIKEL -->
+  <section class="produk" style="padding-bottom:0;">
+    <div class="artikel-search">
+    <input type="text" id="searchInput" placeholder="Cari artikel atau kategori..." />
+  </div>
+    </div>
+  </section>
 
+  <!-- HASIL PENCARIAN -->
+  <section class="artikel-segment" id="searchResult" style="display:none;">
+    <h2>Hasil Pencarian</h2>
+    <div class="artikel-grid" id="searchList"></div>
+    <p id="notFound" class="not-found"></p>
+  </section>
+
+<script src="data/artikel.json"></script>
+<script src="assets/js/artikel.js"></script>
+</main>
+</body>
   <!-- FOOTER -->
   <footer class="footer">
     <p>© 2025 Lakoffie Kopi Bubuk Murni</p>
     <p>Kopi lokal | Seduhan rumahan | Rasa cafe</p>
   </footer>
-
-</body>
 </html>
-
