Add viewport meta tag for responsive design

--- a/artikel/sejarah-kopi-pahit.html
+++ b/artikel/sejarah-kopi-pahit.html
@@ -25,6 +25,7 @@
   </div>
 </header>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sejarah Kopi Pahit dan Munculnya Gap Penikmat Kopi</title>
 
   <meta name="description" content="Mengulas sejarah kebiasaan menyeduh kopi pahit di masyarakat dan munculnya gap antara pecinta kopi pahit dan penikmat kopi spesialty." />
