Update article titles and excerpts in index.html

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
   <h2>Artikel Terbaru</h2>
   <p class="subtitle">Edukasi kopi dari Lakoffie</p>
 
-  <div class="artikel-slider" id="artikelSlider">
+    <div class="artikel-slider" id="artikelSlider">
     <article class="produk-card artikel-card">
-      <h3>Kopi Tidak Sekadar Pahit</h3>
+      <h3>Sejarah Minum Kooi di Indonesia</h3>
       <p class="artikel-excerpt">
-        Mengenal karakter rasa kopi yang lebih luas.
+        Membahas Sejarah Awal Mula Kopi Di Konsumsi Masyarakat Indonesia
       </p>
-      <a href="artikel/kopi-tidak-sekadar-pahit.html" class="btn-secondary">Baca</a>
+      <a href="artikel/sejarah-minum-kopi-di-indonesia.html" class="btn-secondary">Baca</a>
     </article>
-
+      
     <article class="produk-card artikel-card">
       <h3>Robusta & Aroma Gula Jawa</h3>
       <p class="artikel-excerpt">
